# Delta-bot-rusty

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: functions.json  help.md
assets/help/: help.md  imagegen.md
src/: main.rs
src/tasks/: ffmpeg_handler.rs  handle_errors.rs  image_generation.rs  misc_commands.rs  stt.rs  text_generation.rs  tts.rs
